--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 header {
     width: 100%;
-    height: 80px;
+    height: 85px;
     background-color: rgb(255, 241, 89);
     padding: 5px 0px 10px 0px;
     display: flex;
@@ -37,6 +37,19 @@ header {
     top: 14px;
 }
 
+.input-hp {
+    box-sizing: content-box;
+    padding: 0px 5px 0px 25px;
+    position: absolute;
+    margin-left: -25px;
+    font-size: 12px;
+    color: #666;
+    left: 712px;
+    top: 15px;
+    border-left: 1px solid rgb(197, 195, 195);
+    border-right: 1px solid rgb(197, 195, 195);
+}
+
 #input-busqueda {
     margin-left: 123px;
     width: 480px;
@@ -56,13 +69,25 @@ header {
 }
 
 .nav-menu-item {
-    margin: 22px 0px 0px 10px;
+    margin: 22px 0px 0px 0px;
+}
+
+.nav-menu-item-link {
+    color: rgba(51, 51, 51, .6);
+}
+
+.nav-menu-categories-link {
+    color: rgba(51, 51, 51, .6);
+}
+
+.nav-menu-usuarios-link {
+    color: #333;
 }
 
 .nav-menu-list {
     display: flex;
     justify-content: space-around;
-    max-width: 400px;
+    width: 443px;
     font-size: 13px;
     margin: 0px 60px 0px 23.5px;
 }
@@ -70,7 +95,7 @@ header {
 .usuarios {
     display: flex;
     justify-content: space-evenly;
-    margin-left: 67px;
+    margin-left: 81px;
     width: 263px;
 }
 
@@ -102,4 +127,5 @@ header {
 
 #carrito {
     width: 16px;
+    height: 13px;
 }
