--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ header {
 }
 
 .busqueda {
+    position: relative;
     display: flex;
     margin-left: 67px;
 }
@@ -33,8 +34,8 @@ header {
 #input-checkbox {
     width: 11px;
     position: absolute;
-    left: 695px;
-    top: 14px;
+    left: 383px;
+    top: 10px;
 }
 
 .input-hp {
@@ -44,8 +45,8 @@ header {
     margin-left: -25px;
     font-size: 12px;
     color: #666;
-    left: 712px;
-    top: 15px;
+    left: 400px;
+    top: 10px;
     border-left: 1px solid rgb(197, 195, 195);
     border-right: 1px solid rgb(197, 195, 195);
 }
@@ -53,12 +54,13 @@ header {
 #lupa {
     height: 13px;
     position: absolute;
-    top: 13px;
-    right: 632px;
+    top: 9px;
+    right: 383px;
     z-index: 99;
 }
 
 #input-busqueda {
+    padding-left: 11px;
     margin-left: 123px;
     width: 480px;
     height: 30px;
