--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@
     text-decoration: none;
 }
 
+
+/* ===============================Comienza Header================================== */
+
 header {
     width: 100%;
     height: 85px;
@@ -56,7 +59,6 @@ header {
     position: absolute;
     top: 9px;
     right: 383px;
-    z-index: 99;
 }
 
 #input-busqueda {
@@ -138,4 +140,37 @@ header {
 #carrito {
     width: 16px;
     height: 13px;
+}
+
+
+/* ===============================Termina Header================================== */
+
+main {
+    position: relative;
+    width: 100%;
+}
+
+
+/* ===============================Comienza Banner================================== */
+
+.banner {
+    background-image: url("img/banner-principal.jpg");
+    width: 100%;
+    height: 180px;
+    display: flex;
+}
+
+.perfil-hp {
+    background-image: url("https://http2.mlstatic.com/D_NP_698488-MLA45917797720_052021-T.webp");
+    background-position: 0px -16px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 130px;
+    height: 98px;
+    border: 4px solid rgb(255, 255, 255);
+    border-radius: 4px;
+    padding: 4px;
+    margin: -50px 0px 0px 200px;
+    box-shadow: 0px 0px 5px 0.5px rgb(196, 196, 196);
 }
