--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     text-decoration: none;
 }
 
+body {
+    background: #ededed;
+}
+
 
 /* ===============================Comienza Header================================== */
 
@@ -148,6 +152,9 @@ header {
 main {
     position: relative;
     width: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -155,7 +162,8 @@ main {
 
 .banner {
     background-image: url("img/banner-principal.jpg");
-    width: 100%;
+    background-size: cover;
+    width: 1600px;
     height: 180px;
     display: flex;
 }
@@ -170,7 +178,13 @@ main {
     height: 98px;
     border: 4px solid rgb(255, 255, 255);
     border-radius: 4px;
-    padding: 4px;
     margin: -50px 0px 0px 200px;
     box-shadow: 0px 0px 5px 0.5px rgb(196, 196, 196);
+}
+
+.main-productos-categorias {
+    max-width: 1215px;
+    padding-left: 10px;
+    padding-right: 28px;
+    width: 100%;
 }
