--- a/styles.css
+++ b/styles.css
@@ -192,33 +192,89 @@ main {
     display: flex;
     background-color: yellow;
     margin-top: 50px;
+    justify-content: center;
 }
 
 .categorias {
     display: flex;
     flex-direction: column;
-    max-width: 294px;
+    max-width: 278px;
     min-width: 210px;
-    padding-right: 14px;
+    padding: 10px;
     width: 100%;
     background-color: red;
     margin: 10px
 }
 
-.title {}
+.title {
+    font-size: 14px;
+}
 
-.llegan-hoy {}
+.title p {
+    color: #333;
+}
+
+.title h3 {
+    margin-top: 13px;
+}
+
+.llegan-hoy {
+    width: 200px;
+    height: 55px;
+    background-color: white;
+    padding: 17px;
+    font-size: 14px;
+    border-radius: 4px;
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 0px 5px 0.5px rgb(196, 196, 196);
+}
+
+.llegan-hoy-full {
+    width: 200px;
+    height: 55px;
+    background-color: white;
+    padding: 17px;
+    font-size: 14px;
+    border-radius: 4px;
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0px 0px 5px 0.5px rgb(196, 196, 196);
+}
+
+.deslizar {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 24px;
+    height: 16px;
+    background: #ededed;
+    border-radius: 8px;
+}
+
+.boton {
+    position: absolute;
+    width: 13px;
+    height: 13px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0.9px rgb(168, 168, 168);
+}
 
 .productos {
     background-color: blue;
     display: flex;
     flex-wrap: wrap;
-    width: 661px;
+    width: 780px;
 }
 
 .producto-aleatorio {
-    width: 200px;
-    height: 300px;
+    width: 240px;
+    height: 400px;
     background-color: aqua;
     margin: 10px;
 }
