--- a/styles.css
+++ b/styles.css
@@ -310,20 +310,6 @@ main {
     margin-top: 14px;
 }
 
-.productos {
-    background-color: blue;
-    display: flex;
-    flex-wrap: wrap;
-    width: 780px;
-}
-
-.producto-aleatorio {
-    width: 240px;
-    height: 400px;
-    background-color: aqua;
-    margin: 10px;
-}
-
 .categorias div {
     margin-bottom: 15px;
 }
@@ -358,7 +344,7 @@ main {
 .linea {
     width: 10px;
     height: 1px;
-    background-color: black;
+    background-color: rgb(160, 160, 160);
     margin-left: 5px;
 }
 
@@ -381,4 +367,45 @@ main {
 
 .entrega-envios {
     display: flex;
+}
+
+
+/* ===============================Productos================================== */
+
+.productos {
+    background-color: blue;
+    display: flex;
+    flex-wrap: wrap;
+    width: 780px;
+}
+
+.producto-aleatorio {
+    width: 240px;
+    height: 400px;
+    background-color: rgb(255, 255, 255);
+    margin: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 0.9px rgb(168, 168, 168);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+/*Descripción primer producto*/
+
+.img-primer-producto {
+    margin-top: 30px;
+    background-image: url("img/productos/primer-producto.jpg");
+    background-color: black;
+    background-size: cover;
+    width: 100%;
+    height: 159px;
+}
+
+.linea-producto {
+    width: 100%;
+    height: 2.5px;
+    background: #ededed;
+    margin-top: 45px;
 }
