--- a/styles.css
+++ b/styles.css
@@ -498,6 +498,10 @@ main {
 
 .info-footer p {
     background-color: white;
+    font-size: 11px;
+    padding: 10px 10px 0px 10px;
+    border-radius: 3px;
+    color: #666;
 }
 
 footer {
@@ -521,9 +525,28 @@ footer {
 }
 
 .derechos-reservados {
-    color: #666;
-    font-size: 11px;
+    width: 967px;
+    color: rgb(150, 149, 149);
+    font-size: 10px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-bottom: 11px;
+}
+
+
+/* filtro de productos*/
+
+.filtro-productos-hp {
+    position: absolute;
+    display: flex;
+    top: 285px;
+    right: 250px;
+    font-size: 12px;
+    color: #666;
+}
+
+#filtro-productos-hp-id {
+    color: rgb(58, 58, 58);
+    margin-right: 5px;
 }
