--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,14 @@ header {
     width: 1040px;
 }
 
+.logo {
+    cursor: pointer;
+}
+
+#logo-mc {
+    cursor: pointer;
+}
+
 #logo-mc {
     margin: 5px 0px 0px 37px;
     width: 108px;
@@ -185,6 +193,7 @@ main {
     border-radius: 4px;
     margin: 130px 0px 0px -900px;
     box-shadow: 0px 0px 5px 0.5px rgb(196, 196, 196);
+    cursor: pointer;
 }
 
 .main-productos-categorias {
@@ -221,6 +230,14 @@ main {
     margin-top: 13px;
 }
 
+#tiendas-oficiales {
+    cursor: pointer;
+}
+
+#result {
+    cursor: default;
+}
+
 .llegan-hoy {
     width: 200px;
     height: 45px;
@@ -233,6 +250,7 @@ main {
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 0px 1px 0.1px rgb(168, 168, 168);
+    cursor: pointer;
 }
 
 .llegan-hoy-full {
@@ -247,6 +265,7 @@ main {
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 0px 1px 0.1px rgb(168, 168, 168);
+    cursor: pointer;
 }
 
 .llegan-hoy-full p {
@@ -269,6 +288,7 @@ main {
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 0px 1px 0.1px rgb(168, 168, 168);
+    cursor: pointer;
 }
 
 .full-envios {
@@ -322,6 +342,7 @@ main {
 .categorias p {
     margin: 3px;
     color: #666;
+    cursor: pointer;
 }
 
 
@@ -389,6 +410,7 @@ main {
     flex-direction: column;
     align-items: center;
     font-size: 12px;
+    cursor: pointer;
 }
 
 
@@ -485,15 +507,23 @@ main {
     color: black;
 }
 
-.siguiente {
+.siguiente:hover {
     margin-left: 7px;
+    background-color: rgb(218, 216, 216);
+    padding: 7px;
+    cursor: pointer;
+}
+
+.siguiente {
     color: rgb(38, 124, 253);
+    margin-left: 5px;
 }
 
 .info-footer {
     width: 100%;
     display: flex;
     justify-content: center;
+    cursor: pointer;
 }
 
 .info-footer p {
@@ -503,6 +533,9 @@ main {
     border-radius: 3px;
     color: #666;
 }
+
+
+/*==============================footer==================================*/
 
 footer {
     width: 100%;
@@ -544,9 +577,11 @@ footer {
     right: 250px;
     font-size: 12px;
     color: #666;
+    cursor: pointer;
 }
 
 #filtro-productos-hp-id {
     color: rgb(58, 58, 58);
     margin-right: 5px;
+    cursor: default;
 }
