--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 body {
     background: #ededed;
+    zoom: 125%;
 }
 
 
@@ -51,6 +52,7 @@ header {
     position: absolute;
     left: 383px;
     top: 10px;
+    z-index: 10;
 }
 
 .input-hp {
@@ -173,7 +175,7 @@ main {
     display: block;
     background-image: url("img/banner-principal.jpg");
     background-size: cover;
-    width: 1600px;
+    width: 100%;
     height: 180px;
     display: flex;
 }
